<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/newBackground"
    android:background="#D37D9A"
    android:padding="16dp"
    android:visibility="visible"
    tools:context=".gamePage">

    <TextView
        android:id="@+id/player1"
        android:layout_width="167dp"
        android:layout_height="42dp"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="5dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/player_1_x"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/player2"
        android:layout_width="173dp"
        android:layout_height="41dp"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="5dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/player_2_o"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="370dp"
        android:background="@drawable/grid"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.668">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/first"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="click"
                android:contentDescription="@string/first"
                android:tag="0"
                android:padding="13dp"
                tools:ignore="NestedWeights" />

            <ImageView
                android:id="@+id/second"
                android:onClick="click"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="13dp"
                android:layout_weight="1"
                android:contentDescription="@string/second"
                android:tag="1" />

            <ImageView
                android:id="@+id/third"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="13dp"
                android:layout_weight="1"
                android:onClick="click"
                android:contentDescription="@string/third"
                android:tag="2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/four"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="13dp"
                android:onClick="click"
                android:contentDescription="@string/four"
                android:tag="3"
                tools:ignore="NestedWeights" />

            <ImageView
                android:id="@+id/five"
                android:tag="4"
                android:onClick="click"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="13dp"
                android:contentDescription="@string/five"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/six"
                android:tag="5"
                android:contentDescription="@string/six"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="click"
                android:padding="13dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/seven"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="13dp"
                android:layout_weight="1"
                android:tag="6"
                android:onClick="click"
                android:contentDescription="@string/seven"
                tools:ignore="NestedWeights" />

            <ImageView
                android:id="@+id/eight"
                android:layout_width="match_parent"
                android:padding="13dp"
                android:onClick="click"
                android:layout_height="match_parent"
                android:contentDescription="@string/eight"
                android:layout_weight="1"
                android:tag="7" />

            <ImageView
                android:id="@+id/nine"
                android:layout_width="match_parent"
                android:padding="13dp"
                android:layout_height="match_parent"
                android:onClick="click"
                android:layout_weight="1"
                android:contentDescription="@string/nine"
                android:tag="8" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/turns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/x_s_turn"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="italic"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>